--- a/portfolio.html
+++ b/portfolio.html
@@ -14,154 +14,162 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a class="logo" href="./index.htmll"
-        ><span class="logo-blue">Web</span
-        ><span class="logo-darc">Studio</span></a
-      >
-      <nav>
-        <ul>
-          <li><a class="nav agencja" href="./index.html">Agencja</a></li>
-          <li><a class="nav portfolio" href="portfolio.html">Portfolio</a></li>
-          <li><a class="nav kontakt" href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-      <a class="mail-header" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="tel-header" href="tel:+48111111111">+48 111 111 111</a>
-    </header>
-    <main>
-      <!--Tu jest pasek z buttons-->
-      <section>
-        <ul>
-          <li>
-            <button type="button" class="button all-kind">Wszystkie</button>
-          </li>
-          <li><button type="button" class="button pages">Strony</button></li>
-          <li>
-            <button type="button" class="button aplications">Aplikacje</button>
-          </li>
-          <li><button type="button" class="button design">Dizajn</button></li>
-          <li>
-            <button type="button" class="button marketing">Marketing</button>
-          </li>
-        </ul>
-      </section>
-
-      <!--tu jest galeria z projektami-->
-      <section>
-        <ul>
-          <li>
-            <img
-              src="images/projekt9.jpg"
-              alt="Projekt technocrack Zdjęcie przedstawia komputer"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Technocrack</h4>
-            <p class="project-category">Strona internetowa</p>
-          </li>
-          <li>
-            <img
-              src="images/project8.jpg"
-              alt="Projekt New Orlean Zdjecie przedstawia koszykarzy"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Grafika New Orlean vs Golden Star</h4>
-            <p class="project-category">Dizajn</p>
-          </li>
-          <li>
-            <img
-              src="images/project7.jpg"
-              alt="Projekt Seafood Zdjęcie przedstawia rybe"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Restauracja Seafood</h4>
-            <p class="project-category">Aplikacja</p>
-          </li>
-          <li>
-            <img
-              src="images/project6.jpg"
-              alt="Projekt prime Zdjęcie słuchawek"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Projekt Prime</h4>
-            <p class="project-category">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/project5.jpg"
-              alt="Projekt Boxes Zdjęcie pudełek"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Projekt Boxes</h4>
-            <p class="project-category">Aplikacja</p>
-          </li>
-          <li>
-            <img
-              src="images/project4.jpg"
-              alt="Projekt Inspiration has no Borders Zdjęcie komputera"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Inspiration has no Borders</h4>
-            <p class="project-category">Strona internetowa</p>
-          </li>
-          <li>
-            <img
-              src="images/project3.jpg"
-              alt="Projekt Magazyn Limited Edition Zdjęcie gazety"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Magazyn Limited Edition</h4>
-            <p>Dizajn</p>
-          </li>
-          <li>
-            <img
-              src="images/project2.jpg"
-              alt="Projekt LAB Zdjęcie metki od ubrań"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Projekt LAB</h4>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/project1.jpg"
-              alt="Projekt Growing Business Zdjęcie laptopa"
-              width="370"
-              height="294"
-            />
-            <h4 class="project-title">Growing Business</h4>
-            <p>Aplikacja</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <div class="footer">
-        <a class="logo" href="./index.htmll"
-          ><span class="logo-blue">Web</span
-          ><span class="logo-bright">Studio</span></a
-        >
-
-        <address>
-          <span class="address-footer">
-            m. Warszawa, Aleje Jerozolimskie 21</span
+    <div class="container-portfolio">
+      <header>
+        <div class="box-header">
+          <a class="logo" href="./index.htmll"
+            ><span class="logo-blue">Web</span
+            ><span class="logo-darc">Studio</span></a
           >
-          <a class="mail-footer" href="mailto:info@devstudio.com"
+          <nav>
+            <ul class="nav-list">
+              <li><a class="nav" href="./index.html">Agencja</a></li>
+              <li><a class="nav" href="portfolio.html">Portfolio</a></li>
+              <li><a class="nav" href="#">Kontakt</a></li>
+            </ul>
+          </nav>
+          <a class="mail-header" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
-          <a class="tel-footer" href="tel:+48111111111">+48 111 111 111</a>
-        </address>
+          <a class="tel-header" href="tel:+48111111111">+48 111 111 111</a>
+        </div>
+      </header>
+      <main>
+        <div class="box-main">
+        <!--Tu jest pasek z buttons-->
+        <section>
+          <ul class="buttons">
+            <li>
+              <button type="button" class="button all-kind">Wszystkie</button>
+            </li>
+            <li><button type="button" class="button pages">Strony</button></li>
+            <li>
+              <button type="button" class="button aplications">
+                Aplikacje
+              </button>
+            </li>
+            <li><button type="button" class="button design">Dizajn</button></li>
+            <li>
+              <button type="button" class="button marketing">Marketing</button>
+            </li>
+          </ul>
+        </section>
+
+        <!--tu jest galeria z projektami-->
+        <section>
+          <ul>
+            <li>
+              <img
+                src="images/projekt9.jpg"
+                alt="Projekt technocrack Zdjęcie przedstawia komputer"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Technocrack</h4>
+              <p class="project-category">Strona internetowa</p>
+            </li>
+            <li>
+              <img
+                src="images/project8.jpg"
+                alt="Projekt New Orlean Zdjecie przedstawia koszykarzy"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Grafika New Orlean vs Golden Star</h4>
+              <p class="project-category">Dizajn</p>
+            </li>
+            <li>
+              <img
+                src="images/project7.jpg"
+                alt="Projekt Seafood Zdjęcie przedstawia rybe"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Restauracja Seafood</h4>
+              <p class="project-category">Aplikacja</p>
+            </li>
+            <li>
+              <img
+                src="images/project6.jpg"
+                alt="Projekt prime Zdjęcie słuchawek"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Projekt Prime</h4>
+              <p class="project-category">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="images/project5.jpg"
+                alt="Projekt Boxes Zdjęcie pudełek"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Projekt Boxes</h4>
+              <p class="project-category">Aplikacja</p>
+            </li>
+            <li>
+              <img
+                src="images/project4.jpg"
+                alt="Projekt Inspiration has no Borders Zdjęcie komputera"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Inspiration has no Borders</h4>
+              <p class="project-category">Strona internetowa</p>
+            </li>
+            <li>
+              <img
+                src="images/project3.jpg"
+                alt="Projekt Magazyn Limited Edition Zdjęcie gazety"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Magazyn Limited Edition</h4>
+              <p>Dizajn</p>
+            </li>
+            <li>
+              <img
+                src="images/project2.jpg"
+                alt="Projekt LAB Zdjęcie metki od ubrań"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Projekt LAB</h4>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img
+                src="images/project1.jpg"
+                alt="Projekt Growing Business Zdjęcie laptopa"
+                width="370"
+                height="294"
+              />
+              <h4 class="project-title">Growing Business</h4>
+              <p>Aplikacja</p>
+            </li>
+          </ul>
+        </section>
       </div>
-    </footer>
+      </main>
+      <footer>
+        <div class="box-footer">
+          <a class="logo" href="./index.htmll"
+            ><span class="logo-blue">Web</span
+            ><span class="logo-bright">Studio</span></a
+          >
+
+          <address>
+            <span class="address-footer">
+              m. Warszawa, Aleje Jerozolimskie 21</span
+            >
+            <a class="mail-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="tel-footer" href="tel:+48111111111">+48 111 111 111</a>
+          </address>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
