--- a/index.html
+++ b/index.html
@@ -11,26 +11,37 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header>
-      <a class="logo" href="./index.htmll"
-        ><span class="logo-blue">Web</span
-        ><span class="logo-darc">Studio</span></a
-      >
-      <nav>
-        <ul>
-          <li><a class="nav agency" href="./index.html">Agencja</a></li>
-          <li><a class="nav portfolio" href="portfolio.html">Portfolio</a></li>
-          <li><a class="nav contact" href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-      <a class="mail-header" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="tel-header" href="tel:+48111111111">+48 111 111 111</a>
+      <div class="container">
+        <div class="box-header">
+          <a class="logo logo-header" href="./index.htmll"
+            ><span class="logo-blue">Web</span
+            ><span class="logo-darc">Studio</span></a
+          >
+          <nav>
+            <ul class="nav-list">
+              <li><a class="nav" href="./index.html">Agencja</a></li>
+              <li><a class="nav" href="portfolio.html">Portfolio</a></li>
+              <li><a class="nav" href="#">Kontakt</a></li>
+            </ul>
+          </nav>
+          <a class="mail-header" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="tel-header" href="tel:+48111111111">+48 111 111 111</a>
+        </div>
+      </div>
     </header>
     <main>
       <section>
