--- a/index.html
+++ b/index.html
@@ -165,13 +165,14 @@
     </main>
     <!-- Tu Jesr Footer-->
     <footer>
-      <div class="footer">
-        <a class="logo" href="./index.htmll"
+      <div class="container">
+        <div class="box-footer">
+        <a class="logo logo-footer" href="./index.htmll"
           ><span class="logo-blue">Web</span
           ><span class="logo-bright">Studio</span></a
         >
 
-        <address>
+        <address class="box-address">
           <span class="address-footer">
             m. Warszawa, Aleje Jerozolimskie 21</span
           >
@@ -180,6 +181,8 @@
           >
           <a class="tel-footer" href="tel:+48111111111">+48 111 111 111</a>
         </address>
+        
+      </div>
       </div>
     </footer>
   </body>
