--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
                 height="294"
               />
               <h4 class="project-title">Magazyn Limited Edition</h4>
-              <p>Dizajn</p>
+              <p class="project-category">Dizajn</p>
             </li>
           </div>
             <div class="gallery">
@@ -163,7 +163,7 @@
                 height="294"
               />
               <h4 class="project-title">Projekt LAB</h4>
-              <p>Marketing</p>
+              <p class="project-category">Marketing</p>
             </li>
           </div>
             <div class="gallery">
@@ -175,7 +175,7 @@
                 height="294"
               />
               <h4 class="project-title">Growing Business</h4>
-              <p>Aplikacja</p>
+              <p class="project-category">Aplikacja</p>
             </li>
           </div>
           </ul>
@@ -185,12 +185,13 @@
     </main>
     <footer>
       <div class="container">
-        <a class="logo" href="./index.htmll"
+        <div class="box-footer">
+        <a class="logo logo-footer" href="./index.htmll"
           ><span class="logo-blue">Web</span
           ><span class="logo-bright">Studio</span></a
         >
 
-        <address>
+        <address class="box-address">
           <span class="address-footer">
             m. Warszawa, Aleje Jerozolimskie 21</span
           >
@@ -199,6 +200,8 @@
           >
           <a class="tel-footer" href="tel:+48111111111">+48 111 111 111</a>
         </address>
+        
+      </div>
       </div>
     </footer>
   </body>
