--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
       </div>
     </header>
     <main>
+      <div class="container">
+      <div class="box-slogan">
       <section>
         <h1 class="slogan">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button class="button order-service" type="button">Zamów usługe</button>
       </section>
-
+    </div>
       <!--Nasze atuty-->
       <section>
-        <ul>
+        <ul class="box.attitude">
           <li>
             <p class="atuty-title">LOREM IPSUM</p>
             <p class="atuty-content">
@@ -162,6 +164,7 @@
           </li>
         </ul>
       </section>
+    </div>
     </main>
     <!-- Tu Jesr Footer-->
     <footer>
