--- a/index.html
+++ b/index.html
@@ -45,147 +45,147 @@
     </header>
     <main>
       <div class="container">
-      <div class="box-slogan">
-      <section>
-        <h1 class="slogan">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button class="button order-service" type="button">Zamów usługe</button>
-      </section>
-    </div>
-      <!--Nasze atuty-->
-      <section>
-        <ul class="box.attitude">
-          <li>
-            <p class="atuty-title">LOREM IPSUM</p>
-            <p class="atuty-content">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <p class="atuty-title">LOREM IPSUM</p>
-            <p class="atuty-content">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <p class="atuty-title">LOREM IPSUM</p>
-            <p class="atuty-content">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <p class="atuty-title">LOREM IPSUM</p>
-            <p class="atuty-content">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
-      </section>
+        <div class="box-slogan">
+          <h1 class="slogan">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+          <button class="button order-service" type="button">
+            Zamów usługe
+          </button>
+        </div>
 
-      <!--Czym się zajmujemy-->
-      <section>
-        <h2 class="section-title">Czym sie zajmujemy</h2>
-        <ul>
-          <li>
-            <a href="#"
-              ><img
-                src="images/what_we_do/what_we_do1.jpg"
-                alt="praca na komputerze"
-                width="370"
-                height="294"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="images/what_we_do/what_we_do2.jpg"
-                alt="praca na telefonie"
-                width="370"
-                height="294"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="images/what_we_do/what_we_do3.jpg"
-                alt="praca w programie graficznym"
-                width="370"
-                height="294"
-            /></a>
-          </li>
-        </ul>
-      </section>
-      <!---Nasz zespół-->
-      <section>
-        <h2 class="section-title">Nasz zespół</h2>
-        <ul>
-          <li>
-            <img
-              src="images/our_team/product_designer.jpg"
-              alt="Portret specialisty produkt designer"
-              width="270"
-              height="260"
-            />
-            <h4 class="team-name">John Doe</h4>
-            <p class="team-function">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="images/our_team/frontend_developer.jpg"
-              alt="Portret specialisty FrontendDeveloper"
-              width="270"
-              height="260"
-            />
-            <h4 class="team-name">John Doe</h4>
-            <p class="team-function">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="images/our_team/marketing.jpg"
-              alt="Portret specialisty Menager"
-              width="270"
-              height="260"
-            />
-            <h4 class="team-name">John Doe</h4>
-            <p class="team-function">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/our_team/ui_designer.jpg"
-              alt="Portret specialisty UI Designer"
-              width="270"
-              height="260"
-            />
-            <h4 class="team-name">John Doe</h4>
-            <p class="team-function">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </div>
+        <!--Nasze atuty-->
+        <section class="section">
+          <ul class="box-attitude">
+            <li>
+              <p class="atuty-title">LOREM IPSUM</p>
+              <p class="atuty-content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <p class="atuty-title">LOREM IPSUM</p>
+              <p class="atuty-content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <p class="atuty-title">LOREM IPSUM</p>
+              <p class="atuty-content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <p class="atuty-title">LOREM IPSUM</p>
+              <p class="atuty-content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </section>
+
+        <!--Czym się zajmujemy-->
+        <section class="section-what-we-do">
+          <h2 class="section-title">Czym sie zajmujemy</h2>
+          <ul class="box-what-we-do">
+            <li>
+              <a href="#"
+                ><img
+                  src="images/what_we_do/what_we_do1.jpg"
+                  alt="praca na komputerze"
+                  width="370"
+                  height="294"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="images/what_we_do/what_we_do2.jpg"
+                  alt="praca na telefonie"
+                  width="370"
+                  height="294"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="images/what_we_do/what_we_do3.jpg"
+                  alt="praca w programie graficznym"
+                  width="370"
+                  height="294"
+              /></a>
+            </li>
+          </ul>
+        </section>
+        <!---Nasz zespół-->
+        <section class="section team">
+          <h2 class="section-title">Nasz zespół</h2>
+          <ul class="gallery-our-team">
+            <li>
+              <img
+                src="images/our_team/product_designer.jpg"
+                alt="Portret specialisty produkt designer"
+                width="270"
+                height="260"
+              />
+              <h4 class="team-name">John Doe</h4>
+              <p class="team-function">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="images/our_team/frontend_developer.jpg"
+                alt="Portret specialisty FrontendDeveloper"
+                width="270"
+                height="260"
+              />
+              <h4 class="team-name">John Doe</h4>
+              <p class="team-function">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="images/our_team/marketing.jpg"
+                alt="Portret specialisty Menager"
+                width="270"
+                height="260"
+              />
+              <h4 class="team-name">John Doe</h4>
+              <p class="team-function">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="images/our_team/ui_designer.jpg"
+                alt="Portret specialisty UI Designer"
+                width="270"
+                height="260"
+              />
+              <h4 class="team-name">John Doe</h4>
+              <p class="team-function">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <!-- Tu Jesr Footer-->
     <footer>
       <div class="container">
         <div class="box-footer">
-        <a class="logo logo-footer" href="./index.htmll"
-          ><span class="logo-blue">Web</span
-          ><span class="logo-bright">Studio</span></a
-        >
+          <a class="logo logo-footer" href="./index.htmll"
+            ><span class="logo-blue">Web</span
+            ><span class="logo-bright">Studio</span></a
+          >
 
-        <address class="box-address">
-          <span class="address-footer">
-            m. Warszawa, Aleje Jerozolimskie 21</span
-          >
-          <a class="mail-footer" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-          <a class="tel-footer" href="tel:+48111111111">+48 111 111 111</a>
-        </address>
-        
-      </div>
+          <address class="box-address">
+            <span class="address-footer">
+              m. Warszawa, Aleje Jerozolimskie 21</span
+            >
+            <a class="mail-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="tel-footer" href="tel:+48111111111">+48 111 111 111</a>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
