--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </section>
 
         <!--Czym się zajmujemy-->
-        <section class="section-what-we-do">
+        <section class="section section-what-we-do">
           <h2 class="section-title">Czym sie zajmujemy</h2>
           <ul class="box-what-we-do">
             <li>
@@ -123,7 +123,7 @@
         <section class="section team">
           <h2 class="section-title">Nasz zespół</h2>
           <ul class="gallery-our-team">
-            <li>
+            <li class="frame-team">
               <img
                 src="images/our_team/product_designer.jpg"
                 alt="Portret specialisty produkt designer"
@@ -133,7 +133,7 @@
               <h4 class="team-name">John Doe</h4>
               <p class="team-function">Product Designer</p>
             </li>
-            <li>
+            <li class="frame-team">
               <img
                 src="images/our_team/frontend_developer.jpg"
                 alt="Portret specialisty FrontendDeveloper"
@@ -143,7 +143,7 @@
               <h4 class="team-name">John Doe</h4>
               <p class="team-function">Frontend Developer</p>
             </li>
-            <li>
+            <li class="frame-team">
               <img
                 src="images/our_team/marketing.jpg"
                 alt="Portret specialisty Menager"
@@ -153,7 +153,7 @@
               <h4 class="team-name">John Doe</h4>
               <p class="team-function">Marketing</p>
             </li>
-            <li>
+            <li class="frame-team">
               <img
                 src="images/our_team/ui_designer.jpg"
                 alt="Portret specialisty UI Designer"
