--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
     <main>
         <div class="box-slogan">
           <div class="container">
-           <h1 class="slogan">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-           <button class="button order-service" type="button">
-            Zamów usługe
-           </button>
-           </div>
-         </div>
+            <div class="flex-slogan">
+             <h1 class="slogan">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+            <button class="button order-service" type="button">
+            Zamów usługe</button>
+            </div>
+          </div>
+        </div>
 
         <!--Nasze atuty-->
         <section class="section">
