--- a/index.html
+++ b/index.html
@@ -44,19 +44,20 @@
       </div>
     </header>
     <main>
-        <div class="box-slogan">
-          <div class="container">
-            <div class="flex-slogan">
-             <h1 class="slogan">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <div class="box-slogan">
+        <div class="container">
+          <div class="flex-slogan">
+            <h1 class="slogan">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
             <button class="button order-service" type="button">
-            Zamów usługe</button>
-            </div>
+              Zamów usługe
+            </button>
           </div>
         </div>
+      </div>
 
-        <!--Nasze atuty-->
-        <section class="section">
-          <div class="container">
+      <!--Nasze atuty-->
+      <section class="section">
+        <div class="container">
           <ul class="box-attitude">
             <li>
               <p class="atuty-title">LOREM IPSUM</p>
@@ -87,93 +88,96 @@
               </p>
             </li>
           </ul>
-         </div>
-        </section>
+        </div>
+      </section>
 
-        <!--Czym się zajmujemy-->
-        <section class="section section-what-we-do">
-          <div class="container">
-          <h2 class="section-title">Czym sie zajmujemy</h2>
-          <ul class="box-what-we-do">
-            <li>
-              <a href="#"
-                ><img
-                  src="images/what_we_do/what_we_do1.jpg"
-                  alt="praca na komputerze"
-                  width="370"
-                  height="294"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="images/what_we_do/what_we_do2.jpg"
-                  alt="praca na telefonie"
-                  width="370"
-                  height="294"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="images/what_we_do/what_we_do3.jpg"
-                  alt="praca w programie graficznym"
-                  width="370"
-                  height="294"
-              /></a>
-            </li>
-          </ul>
-        </div>
-        </section>
-        <!---Nasz zespół-->
-        <section class="section team">
+      <!--Czym się zajmujemy-->
+      <section class="section">
         <div class="container">
-          <h2 class="section-title">Nasz zespół</h2>
-          <ul class="gallery-our-team">
-            <li class="frame-team">
-              <img
-                src="images/our_team/product_designer.jpg"
-                alt="Portret specialisty produkt designer"
-                width="270"
-                height="260"
-              />
-              <h4 class="team-name">John Doe</h4>
-              <p class="team-function">Product Designer</p>
-            </li>
-            <li class="frame-team">
-              <img
-                src="images/our_team/frontend_developer.jpg"
-                alt="Portret specialisty FrontendDeveloper"
-                width="270"
-                height="260"
-              />
-              <h4 class="team-name">John Doe</h4>
-              <p class="team-function">Frontend Developer</p>
-            </li>
-            <li class="frame-team">
-              <img
-                src="images/our_team/marketing.jpg"
-                alt="Portret specialisty Menager"
-                width="270"
-                height="260"
-              />
-              <h4 class="team-name">John Doe</h4>
-              <p class="team-function">Marketing</p>
-            </li>
-            <li class="frame-team">
-              <img
-                src="images/our_team/ui_designer.jpg"
-                alt="Portret specialisty UI Designer"
-                width="270"
-                height="260"
-              />
-              <h4 class="team-name">John Doe</h4>
-              <p class="team-function">UI Designer</p>
-            </li>
-          </ul>
+          <section class="section-what-we-do">
+            <h2 class="section-title">Czym sie zajmujemy</h2>
+            <ul class="box-what-we-do">
+              <li>
+                <a href="#"
+                  ><img
+                    src="images/what_we_do/what_we_do1.jpg"
+                    alt="praca na komputerze"
+                    width="370"
+                    height="294"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="images/what_we_do/what_we_do2.jpg"
+                    alt="praca na telefonie"
+                    width="370"
+                    height="294"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="images/what_we_do/what_we_do3.jpg"
+                    alt="praca w programie graficznym"
+                    width="370"
+                    height="294"
+                /></a>
+              </li>
+            </ul>
+          </section>
         </div>
-        </section>
-      </div>
+      </section>
+      <!---Nasz zespół-->
+      <section class="section team">
+        <div class="container">
+          <div class="section-team">
+            <h2 class="section-title">Nasz zespół</h2>
+            <ul class="gallery-our-team">
+              <li class="frame-team">
+                <img
+                  src="images/our_team/product_designer.jpg"
+                  alt="Portret specialisty produkt designer"
+                  width="270"
+                  height="260"
+                />
+                <h4 class="team-name">John Doe</h4>
+                <p class="team-function">Product Designer</p>
+              </li>
+              <li class="frame-team">
+                <img
+                  src="images/our_team/frontend_developer.jpg"
+                  alt="Portret specialisty FrontendDeveloper"
+                  width="270"
+                  height="260"
+                />
+                <h4 class="team-name">John Doe</h4>
+                <p class="team-function">Frontend Developer</p>
+              </li>
+              <li class="frame-team">
+                <img
+                  src="images/our_team/marketing.jpg"
+                  alt="Portret specialisty Menager"
+                  width="270"
+                  height="260"
+                />
+                <h4 class="team-name">John Doe</h4>
+                <p class="team-function">Marketing</p>
+              </li>
+              <li class="frame-team">
+                <img
+                  src="images/our_team/ui_designer.jpg"
+                  alt="Portret specialisty UI Designer"
+                  width="270"
+                  height="260"
+                />
+                <h4 class="team-name">John Doe</h4>
+                <p class="team-function">UI Designer</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Tu Jesr Footer-->
     <footer>
