padding section attitude

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
 
       <!--Nasze atuty-->
-      <section class="section">
+      <section class="section attitude">
         <div class="container">
           <ul class="box-attitude">
             <li>
