--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             ><span class="logo-blue">Web</span
             ><span class="logo-darc">Studio</span></a
           >
-          <nav>
+          <nav class="nav">
             <ul class="nav-list">
               <li><a class="nav" href="./index.html">Agencja</a></li>
               <li><a class="nav" href="portfolio.html">Portfolio</a></li>
